Solve IllegalAccessError during testing
Add arg line parameter for scala test maven plugin