@@ -767,6 +767,7 @@
                             <SPARK_LOCAL_IP>127.0.0.1
                             </SPARK_LOCAL_IP> <!-- Suppresses Spark IP discovery during tests (when executed with mvn test) -->
                         </environmentVariables>
+                        <argLine>--add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
                     </configuration>
                     <executions>
                         <execution>
